apps/production/test/apps_v1_deployment_mealie-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-prod
  namespace: mealie-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mealie
        try: "7"
    spec:
      containers:
      - env:
        - name: ALLOW_SIGNUP
          value: "true"
        - name: BASE_URL
          value: https://mealie.yourdomain.com
        - name: DB_ENGINE
          value: postgres
        - name: MAX_WORKERS
          value: "1"
        - name: PGID
          value: "1000"
        - name: POSTGRES_DB
          value: mealie
        - name: POSTGRES_PORT
          value: "5432"
        - name: POSTGRES_SERVER
          value: mealie-postgres-rw
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: mealie-db-creds
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: mealie-db-creds
        - name: PUID
          value: "1000"
        - name: TZ
          value: America/Anchorage
        - name: WEB_CONCURRENCY
          value: "1"
        image: ghcr.io/mealie-recipes/mealie:v1.0.0-RC1.1
        name: mealie
        ports:
        - containerPort: 9000
          hostPort: 9925
          protocol: TCP
        volumeMounts:
        - mountPath: /app/data
          name: mealie-data
        - mountPath: /mnt/secrets-store
          name: secrets-store-inline
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: mealie-data
        persistentVolumeClaim:
          claimName: mealie-data-prod
      - csi:
          driver: secrets-store.csi.k8s.io
          nodePublishSecretRef:
            name: secrets-store-creds
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-kv-secrets
        name: secrets-store-inline
