apps/production/test/v1_service_mealie-prod.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: mealie-prod
  namespace: mealie-prod
spec:
  ports:
  - name: "9925"
    port: 9925
    targetPort: 9000
  selector:
    app: mealie
  type: ClusterIP
